[package]
name = "swagger-demo"
version = "0.1.0"
authors = ["Mark Gulbrandsen <mark.gulbrandsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.7.0"
okapi = "0.4.0"
rocket = "0.4.4"
rocket_okapi = "0.4.0"
serde = "1.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
